proptest-macro/src/property_test/codegen/snapshots/proptest_macro__property_test__codegen__snapshot_tests__many_params.snap
---
source: proptest-macro/src/property_test/codegen/mod.rs
expression: formatted
---
#[test]
fn foo() -> ::proptest::strict::TestResult {
    #[derive(Debug)]
    struct FooArgs {
        x: i32,
        y: i32,
    }
    impl ::proptest::prelude::Arbitrary for FooArgs {
        type Parameters = ();
        type Strategy = ::proptest::strategy::Map<
            ::proptest::arbitrary::StrategyFor<(i32, i32)>,
            fn((i32, i32)) -> Self,
        >;
        fn arbitrary_with((): Self::Parameters) -> Self::Strategy {
            use ::proptest::strategy::Strategy;
            ::proptest::prelude::any::<(i32, i32)>().prop_map(|(x, y)| Self { x, y })
        }
    }
    let strategy = ::proptest::strategy::Strategy::prop_map(
        ::proptest::prelude::any::<FooArgs>(),
        |values| ::proptest::sugar::NamedArguments(stringify!(FooArgs), values),
    );
    ::proptest::strict::ensure_property(
        &strategy,
        concat!(module_path!(), "::", stringify!(foo)),
        |::proptest::sugar::NamedArguments(_, FooArgs { x, y })| {
            let _sum = x + y;
            Ok(())
        },
    )
}
